# personal-ai-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: .dockerignore  .env.example  Dockerfile  client.py  docker-compose.yml  memory-test-pgsql.ipynb  memory-test.ipynb  pyproject.toml  run_service.py  streamlit_app.py
app/agents/: personal_assistant.py  prompts.py  tools.py  utilities.py
app/config/: config.py  settings.py
app/core/: llm.py
app/memory/: __init__.py  mongodb.py  postgres.py
app/service/: schemas.py  service.py
notebooks/: memory-test-mongo.ipynb  memory-test-pgsql.ipynb
tests/: test_dummy.py
